<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.gabekeyner.project_2.Main_Menus.ClickedExploreDrinkItem"
    android:background="@drawable/explore_image">

    <ImageView

        android:layout_width = "200dp"
        android:layout_height= "200dp"
        android:scaleType="center"
        android:layout_gravity="center_horizontal|bottom"
        android:src="@drawable/beer_display_image"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingTop="50dp"
            android:text="@string/name_placer"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="50dp"
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingTop="10dp"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"
            android:text="@string/abv_placer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="10dp"
            android:id="@+id/abvView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingTop="10dp"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"
            android:text="@string/description_placer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="10dp"
            android:id="@+id/descView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"/>
    </LinearLayout>

</LinearLayout>
